[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvt"
version = "0.2.0"
description = "Developer‑Tools launcher with per‑repo helpers"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
completion = ["argcomplete>=3.2"]

[project.scripts]
dvt = "dvt.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}          # <‑‑ tell setuptools we’re using src/
packages = ["dvt"]                  # the package lives at src/dvt
